[gd_scene load_steps=8 format=3 uid="uid://t5ate7rpmi3l"]

[ext_resource type="PackedScene" uid="uid://5ln32fnvrhnl" path="res://src/Game/Enemies/Enemy.tscn" id="1_yvr1m"]
[ext_resource type="Script" path="res://src/Game/Enemies/Barnacle/barnacle.gd" id="2_bv5kp"]
[ext_resource type="Texture2D" uid="uid://ivej4lyt2m5y" path="res://assets/images/Enemies/Barnacle/barnacle_bite.png" id="2_dk4ta"]
[ext_resource type="Texture2D" uid="uid://dxt102yg2bsmr" path="res://assets/images/Enemies/Barnacle/barnacle_dead.png" id="3_uu1vn"]
[ext_resource type="Texture2D" uid="uid://bo0wtbs5rteud" path="res://assets/images/Enemies/Barnacle/barnacle.png" id="4_qv6m2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jmeai"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dk4ta")
}, {
"duration": 1.0,
"texture": ExtResource("4_qv6m2")
}, {
"duration": 1.0,
"texture": ExtResource("2_dk4ta")
}, {
"duration": 1.0,
"texture": ExtResource("4_qv6m2")
}, {
"duration": 1.0,
"texture": ExtResource("2_dk4ta")
}, {
"duration": 1.0,
"texture": ExtResource("4_qv6m2")
}],
"loop": false,
"name": &"bite",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dk4ta")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uu1vn")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qv6m2")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hod7"]
size = Vector2(128, 178.667)

[node name="Barnacle" instance=ExtResource("1_yvr1m")]
z_index = -1
scale = Vector2(0.75, 0.75)
script = ExtResource("2_bv5kp")
max_delay = 1.0

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_jmeai")
animation = &"bite"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 14.6667)
shape = SubResource("RectangleShape2D_5hod7")

[node name="TopPos" parent="." index="2"]
position = Vector2(0, 85.3333)

[node name="ShowTimer" type="Timer" parent="." index="7"]
wait_time = 1.5
one_shot = true

[node name="HideTimer" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ShowTimer" to="." method="_on_show_timer_timeout"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
